@@ -32,6 +32,7 @@ Anton Gepting
 Anton Kochkov (XVilka)
 Artur F. (arturfabriciohahaedgy)
 Artur Shaik (artur-shaik)
+asmodeus812 (Svetlozar Iliev)
 astrell
 AtomToast
 Aurelio Sanabria (Sufrostico)
